--- a/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
+++ b/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Description>
       Possui classes para padronizar a comunicação com apis externas, padronizando inclusive o
       retorno da request.
@@ -15,8 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" /> -->
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.3" />
   </ItemGroup>
 
