--- a/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
+++ b/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="8.0.1" />
+		<PackageReference Include="AspnetCore.HealthChecks.UI.Client" Version="8.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="8.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup Label="Packaging">
