--- a/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
+++ b/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
@@ -13,6 +13,8 @@
 		<PackageReference Include="AspnetCore.HealthChecks.UI.Client" Version="8.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="8.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage" Version="8.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.AzureKeyVault" Version="8.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Azure.Storage.Blobs" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
