--- a/teste-devcontainer/devcontainer.json
+++ b/teste-devcontainer/devcontainer.json
@@ -1,18 +1,16 @@
 {
-    "name": "(.NET)",
+    "name": ".NET",
     "build": {
         "context": ".",
         "dockerfile": "Dockerfile",
         "args": { 
             "PathApp": "${containerWorkspaceFolder}",
-            "NugetMode": "SKIP",
-            "UserApp": "devcontainer",
-            "HttpProxyEnv": "${localEnv:HTTP_PROXY}",
-            "HttpsProxyEnv": "${localEnv:HTTPS_PROXY}",
-            "NoProxyEnv": "${localEnv:NO_PROXY}"
+            "NugetMode": "SKIP"
+            // "HttpProxyEnv": "${localEnv:HTTP_PROXY}",
+            // "HttpsProxyEnv": "${localEnv:HTTPS_PROXY}",
+            // "NoProxyEnv": "${localEnv:NO_PROXY}"
         }
     },
-    "containerUser": "devcontainer",
     "features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {
 			"installZsh": true,
@@ -27,15 +25,21 @@
         },
 		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
+    "waitFor": "onCreateCommand",
+    "postAttachCommand": "./.devcontainer/custom-install.sh", 
 
     "mounts": [
-        "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/home/devcontainer/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.ssh,target=/home/devcontainer/.ssh,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/home/devcontainer/.microsoft/usersecrets,type=bind,consistency=cached",
-        "source=${localWorkspaceFolder}/.devcontainer/atomic.omp.json,target=/home/devcontainer/.config/atomic.omp.json,type=bind,consistency=cached"
+        "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+        "source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
+        "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
     ],
-    "postStartCommand": "/bin/bash /home/devcontainer/change-owner.sh",
-
+    "containerEnv": {
+        "WORKFOLDER": "${containerWorkspaceFolder}",
+        "NUGET_XMLDOC_MODE": "SKIP"
+        // "HTTP_PROXY": "${localEnv:HTTP_PROXY}",
+        // "HTTPS_PROXY": "${localEnv:HTTPS_PROXY}",
+        // "NO_PROXY": "${localEnv:NO_PROXY}",
+    },
     "customizations": {
         "vscode": {
             "settings": {
@@ -45,6 +49,8 @@
             "extensions": [
                 "ms-dotnettools.csharp",
                 "k--kato.docomment",
+                "EditorConfig.EditorConfig",
+                "GitHub.copilot",
                 "ms-dotnettools.csdevkit",
                 "eamodio.gitlens",
                 "ecmel.vscode-html-css",
